--- a/css/registration.css
+++ b/css/registration.css
@@ -77,7 +77,7 @@ input[type="submit"]:hover, input[type="submit"]:focus{
 	padding: 40px;
 	width: 300px;
 	height: 400px;
-	background-image: url('../img/pic2.jpg');
+	background-image: url('../img/bg.jpg');
 	background-size: cover;
 	background-position: center;
 }
