--- a/css/agency.css
+++ b/css/agency.css
@@ -64,13 +64,13 @@ h6 {
   font-weight: 700;
 }
 
-.btn-danger {
+.btn-dongker {
   color: #fff;
-  background-color: #dc3545;
-  border-color: #dc3545;
+  background-color: #000080;
+  border-color: #fff;
 }
 
-.btn-danger:hover {
+.btn-dongker:hover {
   color: #fff;
   background-color: #c82333;
   border-color: #bd2130;
@@ -136,8 +136,8 @@ fieldset[disabled] .btn-primary.active {
 }
 .btn-xl {
   color: white;
-  background-color: #fed136;
-  border-color: #fed136;
+  background-color: #000088;
+  border-color: #fff;
   font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
   text-transform: uppercase;
   font-weight: 700;
@@ -187,7 +187,7 @@ fieldset[disabled] .btn-xl.active {
   border-color: transparent;
 }
 .navbar-custom .navbar-brand {
-  color: #fed136;
+  color: #fff;
   font-family: "Kaushan Script", "Helvetica Neue", Helvetica, Arial, cursive;
 }
 .navbar-custom .navbar-brand:hover,
@@ -226,12 +226,12 @@ fieldset[disabled] .btn-xl.active {
 .navbar-custom .navbar-nav > .active > a {
   border-radius: 0;
   color: white;
-  background-color: #fed136;
+  background-color: #0000ff;
 }
 .navbar-custom .navbar-nav > .active > a:hover,
 .navbar-custom .navbar-nav > .active > a:focus {
   color: white;
-  background-color: #fec503;
+  background-color: #000080;
 }
 @media (min-width: 768px) {
   .navbar-custom {
@@ -349,7 +349,7 @@ section h3.section-subheading {
   margin: 0 auto;
 }
 #portfolio .portfolio-item .portfolio-link .portfolio-hover {
-  background: rgba(254, 209, 54, 0.9);
+  background: rgba(30, 144, 255, 0.6);
   position: absolute;
   width: 100%;
   height: 100%;
