--- a/css/agency.css
+++ b/css/agency.css
@@ -64,13 +64,13 @@ h6 {
   font-weight: 700;
 }
 
-.btn-dongker {
+.btn-danger {
   color: #fff;
-  background-color: #000080;
-  border-color: #fff;
+  background-color: #dc3545;
+  border-color: #dc3545;
 }
 
-.btn-dongker:hover {
+.btn-danger:hover {
   color: #fff;
   background-color: #c82333;
   border-color: #bd2130;
@@ -136,8 +136,8 @@ fieldset[disabled] .btn-primary.active {
 }
 .btn-xl {
   color: white;
-  background-color: #000088;
-  border-color: #fff;
+  background-color: #fed136;
+  border-color: #fed136;
   font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
   text-transform: uppercase;
   font-weight: 700;
@@ -187,7 +187,7 @@ fieldset[disabled] .btn-xl.active {
   border-color: transparent;
 }
 .navbar-custom .navbar-brand {
-  color: #fff;
+  color: #fed136;
   font-family: "Kaushan Script", "Helvetica Neue", Helvetica, Arial, cursive;
 }
 .navbar-custom .navbar-brand:hover,
@@ -226,12 +226,12 @@ fieldset[disabled] .btn-xl.active {
 .navbar-custom .navbar-nav > .active > a {
   border-radius: 0;
   color: white;
-  background-color: #0000ff;
+  background-color: #fed136;
 }
 .navbar-custom .navbar-nav > .active > a:hover,
 .navbar-custom .navbar-nav > .active > a:focus {
   color: white;
-  background-color: #000080;
+  background-color: #fec503;
 }
 @media (min-width: 768px) {
   .navbar-custom {
@@ -349,7 +349,7 @@ section h3.section-subheading {
   margin: 0 auto;
 }
 #portfolio .portfolio-item .portfolio-link .portfolio-hover {
-  background: rgba(30, 144, 255, 0.6);
+  background: rgba(254, 209, 54, 0.9);
   position: absolute;
   width: 100%;
   height: 100%;
@@ -707,14 +707,15 @@ ul.social-buttons li a:active {
   text-align: center;
 }
 .portfolio-modal .modal-content h2 {
-  margin-bottom: 15px;
+  margin-bottom: 30px;
+  margin-top: 100px;
   font-size: 3em;
 }
 .portfolio-modal .modal-content p {
-  margin-bottom: 30px;
+  margin-bottom: 20px;
 }
 .portfolio-modal .modal-content p.item-intro {
-  margin: 20px 0 30px;
+  margin:20px 0 20px;
   font-family: "Droid Serif", "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-style: italic;
   font-size: 16px;
