--- a/css/login.css
+++ b/css/login.css
@@ -1,7 +1,7 @@
 body{
 	margin: 0;
 	padding: 0;
-	background: url(../img/pic2.jpg);
+	background: #efefef; 
 	background-size: cover;
 	background-position: center;
 	font-family: sans-serif;
