--- a/css/agency.css
+++ b/css/agency.css
@@ -10,6 +10,11 @@ body {
 .text-muted {
   color: #777777;
 }
+
+.text-light {
+  color: #ffffff;
+}
+
 .text-primary {
   color: #fed136;
 }
@@ -188,7 +193,7 @@ fieldset[disabled] .btn-xl.active {
 }
 .navbar-custom .navbar-brand {
   color: #fed136;
-  font-family: "Kaushan Script", "Helvetica Neue", Helvetica, Arial, cursive;
+  font-family: "Helvetica Neue", Helvetica, Arial, cursive;
 }
 .navbar-custom .navbar-brand:hover,
 .navbar-custom .navbar-brand:focus,
@@ -598,6 +603,7 @@ section#contact {
   background-position: center;
   background-repeat: no-repeat;
 }
+
 section#contact .section-heading {
   color: white;
 }
@@ -791,12 +797,12 @@ body {
 
 .cari-box{
   width: 130px;
+  font-family: arial;
     box-sizing: border-box;
     border: 2px solid #ccc;
     border-radius: 4px;
     font-size: 16px;
     background-color: white;
-    background-image: url('');
     background-position: 10px 10px; 
     background-repeat: no-repeat;
     padding: 12px 20px 12px 40px;
@@ -806,4 +812,34 @@ body {
 
 .cari-box:focus {
     width: 100%;
+}
+
+section#getapp {
+  background: linear-gradient(to bottom, #ffff00 99%, #ffffff 0%);
+}
+
+section#subscribe {
+background: linear-gradient(to bottom, #222222 0%, #ffff00 99%);
+}
+
+.btn-dark {
+  color: white;
+  background-color: #222222;
+  border-color: #222222;
+  font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  text-transform: uppercase;
+  font-weight: 700;
+  border-radius: 3px;
+  font-size: 18px;
+  padding: 20px 40px;
+}
+
+.btn-dark:hover,
+.btn-dark:focus,
+.btn-dark:active,
+.btn-dark.active,
+.open .dropdown-toggle.btn-dark {
+  color: white;
+  background-color: #303030;
+  border-color: #303030;
 }
