--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,7 @@ div.gallery {
     margin: 5px;
     border: 1px solid #ccc;
     float: left;
+    box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.1);
 }
 
 div.gallery:hover {
@@ -17,14 +18,49 @@ div.desc {
     padding: 15px;
     text-align: center;
 }
-.mgr{
-  margin: 10px;
-  padding: 5px;
-}
 .txt{
   text-align: center;
 }
-.img{
-  width: 400px;
-  height:300px;
+
+.col-img{
+  margin-top: 40px;
+  margin: auto;
+  padding: 10px;
+}
+div img{
+  width: 300px;
+  height: 300px;
+}
+.contentA{
+    box-sizing: border-box;
+    max-width: 90%;
+    margin: auto;
+    margin-top: 40px;
+    margin-bottom: 40px;
+    padding: 55px;
+
+    background-color:  #ffffff;
+    box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.1);
+
+    font: 14px sans-serif;
+}
+th, td{
+  padding: 25px;
+  text-align: left;
+}
+.contentB{
+    box-sizing: border-box;
+    max-width: 90%;
+    margin: auto;
+    margin-top: 40px;
+    margin-bottom: 40px;
+    background-color:  #ffffff;
+    box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.1);
+    font: 14px sans-serif;
+}
+p{
+    line-height: 1.2;
+}
+.event{
+  padding: 20px;
 }
