--- a/css/login.css
+++ b/css/login.css
@@ -63,7 +63,7 @@ h1{
 	border: none;
 	outline: none;
 	height: 40px;
-	background: #fb2525;
+	background: #fed136;
 	color: #fff;
 	font-size: 18px;
 	border-radius: 20px;
