--- a/css/registration.css
+++ b/css/registration.css
@@ -23,7 +23,7 @@ body{
 	left: 0;
 	box-sizing: border-box;
 	padding: 40px;
-	width: 300px;
+	width: 500px;
 	height: 400px;
 }
 
@@ -53,7 +53,7 @@ input[type="submit"]{
 	margin-bottom: 28px;
 	width: 120px;
 	height: 32px;
-	background: #f44336;
+	background: #fed136;
 	border: none;
 	border-radius: 2px;
 	color: #fff;
@@ -65,7 +65,7 @@ input[type="submit"]{
 }
 
 input[type="submit"]:hover, input[type="submit"]:focus{
-	background: #ff5722;
+	background: #ffc107;
 	transition: 0.2s ease;
 }
 
