--- a/css/agency.css
+++ b/css/agency.css
@@ -267,7 +267,7 @@ fieldset[disabled] .btn-xl.active {
   }
 }
 header {
-  background-image: url('../img/header-bg1.jpg');
+  background-image: url('../img/bg1.jpg');
   background-repeat: no-repeat;
   background-attachment: scroll;
   background-position: center center;
@@ -286,20 +286,24 @@ header .intro-text .intro-lead-in {
   font-family: "Droid Serif", "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-style: italic;
   font-size: 22px;
-  line-height: 22px;
-  margin-bottom: 25px;
-}
-header .intro-text .intro-heading {
-  font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
-  text-transform: uppercase;
-  font-weight: 700;
-  font-size: 50px;
   line-height: 50px;
   margin-bottom: 25px;
 }
+
+.judul {
+  font-size: 150px;
+  font-weight: bold;
+  font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
+}
+
+header .intro-heading-small {
+  font-family: "Montserrat";
+  font-size: 50px;
+}
+
 @media (min-width: 768px) {
   header .intro-text {
-    padding-top: 300px;
+    padding-top: 20px;
     padding-bottom: 200px;
   }
   header .intro-text .intro-lead-in {
@@ -850,4 +854,13 @@ background: linear-gradient(to bottom, #222222 0%, #ffff00 99%);
   border: 0px;
   height: 50%;
   width: 30%;
+}
+.more{
+  width: 100%;
+  text-align: center;
+}
+.more button{
+  border:none;
+  font-size: 20px;
+  background-color: transparent;
 }
